add comments to all html files

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,6 @@
 {% extends 'layout.html' %}
 <!--  -->
-{% block title %}
-<!--  -->
-{% endblock %}
+{% block title %} Main Page {% endblock %}
 <!--  -->
 
 {% block headers %}
@@ -10,7 +8,7 @@
 {% endblock %}
 <!--  -->
 {% block main %}
-<!--  -->
+<!-- Title  -->
 <div class="container mt-6">
 	<p class="yoda_green display-4">Detect anything I shall!</p>
 	<p class="lead">
@@ -18,6 +16,7 @@
 		navigation bar you can!
 	</p>
 </div>
+<!-- Card group with 4 cards corresponding to the four functionalities of the website -->
 <div class="container mt-6">
 	<div class="card-group d-flex justify-content-center flex-column">
 		<div class="row">
