--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,7 @@
 {% block title %} Log In {% endblock %}
 <!--  -->
 {% block main %}
-<!--  -->
+<!-- Show errors to user -->
 {% if get_flashed_messages() %}
 <header>
 	<div
