--- a/templates/password.html
+++ b/templates/password.html
@@ -6,6 +6,7 @@
 <form
 	action="/change_pass"
 	method="post">
+	<!-- Get old password and new password and send to change_pass route -->
 	<div class="mb-3">
 		<input
 			autocomplete="off"
@@ -14,7 +15,7 @@
 			id="old_pass"
 			name="old_pass"
 			placeholder="Your Old Password"
-			type="text" />
+			type="password" />
 	</div>
 	<div class="mb-3">
 		<input
@@ -24,7 +25,7 @@
 			id="new_pass"
 			name="new_pass"
 			placeholder="Your New password"
-			type="text" />
+			type="password" />
 	</div>
 	<button
 		class="btn btn-primary"
