--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,3 +1,4 @@
+<!-- Basic layout of YODA webpage -->
 <!DOCTYPE html>
 
 <html lang="en">
@@ -7,7 +8,7 @@
 			name="viewport"
 			content="initial-scale=1, width=device-width" />
 
-		<!-- http://getbootstrap.com/docs/5.1/ -->
+		<!-- link bootstrap -->
 		<link
 			crossorigin="anonymous"
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -17,8 +18,7 @@
 			crossorigin="anonymous"
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"></script>
-
-		<!-- https://favicon.io/emoji-favicons/money-bag/ -->
+		<!-- link icon and css -->
 		<link
 			href="/static/yoda.ico"
 			rel="icon" />
@@ -26,12 +26,16 @@
 		<link
 			href="static/css/styles.css"
 			rel="stylesheet" />
+
+		<!-- Add block for individual pages to add their own dependencies -->
 		{% block headers %} {% endblock %}
 
+		<!-- Title for each page -->
 		<title>YODA! {% block title %}{% endblock %}</title>
 	</head>
 
 	<body>
+		<!-- Navbar with all available functionality -->
 		<nav class="bg-light border navbar navbar-expand-md navbar-light">
 			<div class="container-fluid">
 				<a
@@ -56,6 +60,7 @@
 				<div
 					class="collapse navbar-collapse"
 					id="navbar">
+					<!-- Check if user is logged in.  -->
 					{% if session["user_id"] %}
 					<ul class="navbar-nav mr-auto">
 						<li class="nav-item">
@@ -104,6 +109,7 @@
 						</li>
 					</ul>
 					{% else %}
+					<!-- Display this if not logged in -->
 					<ul class="navbar-nav ms-auto mt-2">
 						<li class="nav-item">
 							<a
@@ -124,7 +130,7 @@
 				</div>
 			</div>
 		</nav>
-		<!--  -->
+		<!-- Display errors if the exist -->
 		{% if get_flashed_messages() %}
 		<header>
 			<div
@@ -134,11 +140,9 @@
 			</div>
 		</header>
 		{% endif %}
-		<!--  -->
+		<!-- main content of each tab goes here -->
 		<main class="container-fluid py-5 text-center">
 			{% block main %}{% endblock %}
 		</main>
-
-		<footer class="mb-5 small text-center text-muted"></footer>
 	</body>
 </html>
