--- a/templates/live_webcam.html
+++ b/templates/live_webcam.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 <!--  -->
 {% block headers %}
+<!-- scripts to machine learning libraries and p5js -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js"></script>
 <script src="https://unpkg.com/ml5@0.7.1/dist/ml5.min.js"></script>
 {% endblock %}
@@ -12,12 +13,14 @@
 <!--  -->
 
 <p>
+	<!-- button to toggle detection -->
 	<button
 		class="btn btn-primary"
 		id="toggleDetectingOnOff"
 		onclick="toggleDetecting()">
 		Start Detecting
 	</button>
+	<!-- button to download image -->
 	<button
 		class="btn btn-success"
 		id="downloadImage"
