--- a/templates/register.html
+++ b/templates/register.html
@@ -3,7 +3,7 @@
 {% block title %} Register {% endblock %}
 <!--  -->
 {% block main %}
-<!--  -->
+<!-- Create form to get username, password, and confirmation -->
 <form
 	action="/register"
 	method="post">
