--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -3,22 +3,11 @@ nav .navbar-brand {
 	font-size: xx-large;
 }
 
-/* Colors for brand */
-/* nav .navbar-brand .yoda_green {
-} */
 .yoda_green {
 	color: #2e944b;
 }
-/* nav .navbar-brand .red {
-	color: #ea433b;
-}
-nav .navbar-brand .yellow {
-	color: #f5b82e;
-}
-nav .navbar-brand .green {
-	color: #2e944b;
-} */
 
+/* CSS for the download button */
 .download-btn {
 	background-color: DodgerBlue;
 	border: none;
